# CognitiveBias

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: dataHighFramingA.csv  data_lab.csv
datasets/: dataConsA.csv  unified_dataset.csv
docs/: PROJECT_DESCRIPTION.md
outputs/: advanced_analysis_results.json  merge_data_analysis.json  summary.json
outputs/advanced_analysis/: advanced_analysis_results.json
outputs/combined/: metrics.json  rf_features_correlation.csv
outputs/separate_analysis/data_cons/: metrics.json  rf_features_correlation.csv
outputs/separate_analysis/data_framing/: metrics.json  rf_features_correlation.csv
outputs/separate_analysis/data_lab/: metrics.json  rf_features_correlation.csv
preprocessing/combined/: unified_dataset.csv
preprocessing/data_cons/: preprocessed.csv
preprocessing/data_framing/: preprocessed.csv
preprocessing/data_lab/: preprocessed.csv
scripts/: __init__.py  advanced_analysis.py  evidence_integration_analysis.py  merge_data.py  paths.py
scripts/models/: __init__.py  training.py
scripts/preprocessing/: __init__.py  data_pipeline.py
src/: advanced_analysis.py  evidence_integration_analysis.py
tests/: test_imports.py
