[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laba2-evidence-integration"
version = "0.1.0"
description = "Evidence integration and AI-assisted bias discovery (lottery choice experiments)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "tensorflow>=2.13.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts", "scripts.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
